fix(nav-desktop-alignments): fix alignments considering tabs padding and and apply values in rem

--- a/packages/components/src/components/bal-navigation/bal-navigation.sass
+++ b/packages/components/src/components/bal-navigation/bal-navigation.sass
@@ -8,7 +8,6 @@
   background-color: var(--bal-color-background)
   +desktop
     background-color: transparent
-    padding-bottom: 0
     position: fixed
     top: 0
     left: 0
@@ -29,19 +28,20 @@
       gap: .5rem
       align-items: center
       margin: 0 auto
-      width: calc(100vw - 65px)
+      width: calc(100vw - 4rem)
       padding: 0
       +widescreen
-        width: calc(100vw - 240px)
+        width: calc(100vw - 15rem)
       +fullhd
-        width: calc(100vw - 489px)
-        max-width: 1431px
+        width: calc(100vw - 30rem)
+        max-width: 1430px
 
     +element(start)
       display: flex
       flex-grow: 1
       align-items: center
       gap: .5rem
+      margin-left: -.75rem
 
   +element(main)
     +unselectable
@@ -59,7 +59,7 @@
         border-bottom-right-radius: var(--bal-radius-large)
     +widescreen
       margin: 1rem auto 0
-      width: calc(100vw - 160px)
+      width: calc(100vw - 10rem)
       border-radius: var(--bal-radius-large)
     +fullhd
       margin: 1.5rem auto 0
@@ -76,7 +76,7 @@
         display: flex
         justify-content: space-between
         flex-wrap: wrap
-        align-items: start
+        align-items: flex-start
         width: 100%
       +until-widescreen
         width: 100%
@@ -113,7 +113,7 @@
       margin-right: 1rem
       +widescreen
         margin: 0
-        padding: 0 1rem
+        padding: 0
 
     +element(body)
       position: relative
